add italian switch to slo races

--- a/en/contact-us.html
+++ b/en/contact-us.html
@@ -49,7 +49,7 @@
 						class="menu-link">Registration</a></li>
 				<li><a href="about" class="menu-link">About</a></li>
 				<li><a href="contact-us" class="menu-link">Contact</a></li>
-				<li><a href="/sl/kontakt" class="language-switch menu-link">SI <i class="fas fa-globe"></i></a></li>
+				<li><a href="/sl/kontakt" class="language-switch menu-link">SI</a></li>
 			</ul>
 		</div>
 	</header>
