--- a/en/races/ultra-58km.html
+++ b/en/races/ultra-58km.html
@@ -48,7 +48,7 @@
 						class="menu-link">Registration</a></li>
 				<li><a href="/en/about" class="menu-link">About</a></li>
 				<li><a href="/en/contact-us" class="menu-link">Contact</a></li>
-				<li><a href="/sl/proge/ultra-58km" class="language-switch menu-link">Sl <i class="fas fa-globe"></i></a>
+				<li><a href="/sl/proge/ultra-58km" class="language-switch menu-link">SI</a>
 			</ul>
 		</div>
 	</header>
