--- a/index.html
+++ b/index.html
@@ -50,7 +50,10 @@
 						class="menu-link">Prijava</a></li>
 				<li><a href="sl/o-nas" class="menu-link">O nas</a></li>
 				<li><a href="sl/kontakt" class="menu-link">Kontakt</a></li>
-				<li><a href="/en" class="language-switch menu-link">EN <i class="fas fa-globe"></i></a>
+				<li>
+					<a href="/en" class="language-switch menu-link">EN</a>
+					<span>/</span>					
+					<a href="/it" class="language-switch menu-link">IT</a>
 				</li>
 			</ul>
 		</div>
@@ -138,8 +141,8 @@
 		</section>
 
 		<!--section-C-->
-		<section class="section-c grid">
-			<div class="content-wrap about center">
+		<section class="section-c grid center">
+			<div class="content-wrap about">
 				<p class="landing-page-text">
 					Kliknite
 					<a href="sl/info">Info</a> ali pa si preberite
