--- a/it/chi-siamo.html
+++ b/it/chi-siamo.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
 
 <head>
 	<!-- Global site tag (gtag.js) - Google Analytics -->
@@ -18,7 +18,7 @@
 	<meta name="keywords" content="trail, running, treh, vrhov, slovenija, sabotin, skabrijel, sveta gora">
 	<meta name="description"
 		content="Tek treh vrhov 2020 | 12km, 28km, 58km | trail running over three summits surrounding the valley of Soča river in the Western Slovenia, 10th October 2020">
-	<title>Tek treh vrhov | About</title>
+	<title>Tek treh vrhov | Chi siamo</title>
 	<!--Styles-->
 	<link rel="stylesheet" href="/styles/main.css">
 	<link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
@@ -43,12 +43,12 @@
 		<div id="menu">
 			<a id="close-button">&times;</a>
 			<ul class="menu-content">
-				<li><a href="faq" class="menu-link">FAQ</a></li>
-				<li><a href="races" class="menu-link" id="races-button">Races</a></li>
+				<li><a href="informazioni" class="menu-link">Info</a></li>
+				<li><a href="gare" class="menu-link" id="races-button">Gare</a></li>
 				<li><a href="https://sportotime.com/eng/event/1171" target="_blank" rel="noopener noreferrer"
-						class="menu-link">Registration</a></li>
-				<li><a href="about" class="menu-link">About</a></li>
-				<li><a href="contact-us" class="menu-link">Contact</a></li>
+						class="menu-link">Iscrizioni</a></li>
+				<li><a href="chi-siamo" class="menu-link">Chi siamo</a></li>
+				<li><a href="contatti" class="menu-link">Contatti</a></li>
 				<li><a href="/sl/o-nas" class="language-switch menu-link">SI</a>
 				</li>
 			</ul>
@@ -63,10 +63,10 @@
 					srcset="../assets/images/showcase-9-m.jpg 650w,
 					../assets/images/showcase-9.jpg 750w"
 					sizes="100vw"
-					alt="Tek treh vrhov - About us">
+					alt="Tek treh vrhov - Chi siamo us">
 				<div class="text-wrap grid">
 					<span class="showcase-title content-wrap">
-						About
+						Chi siamo
 					</span>
 				</div>
 			</div>
