--- a/it/gare/go1v-12km.html
+++ b/it/gare/go1v-12km.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
 
 <head>
 	<!-- Global site tag (gtag.js) - Google Analytics -->
@@ -18,7 +18,7 @@
 	<meta name="keywords" content="trail, running, treh, vrhov, slovenija, sabotin, skabrijel, sveta gora">
 	<meta name="description"
 		content="Tek treh vrhov 2020 | 12km, 28km, 58km | trail running over three summits surrounding the valley of Soča river in the Western Slovenia, 10th October 2020">
-	<title>Tek treh vrhov | Go3V 28km</title>
+	<title>Tek treh vrhov | Go1V 12km</title>
 	<!--Styles-->
 	<link rel="stylesheet" href="/styles/main.css">
 	<link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
@@ -31,42 +31,40 @@
 	<!--Navigation bar-->
 	<header id="navigation-bar">
 		<div class="home-container">
-			<a href="/en" id="logo">T3V</a>
-		</div>
+			<a href="/en" id="logo">T3V</a> </div>
 		<div class="menu-icon-container">
 			<button class="menu-icon" data-target="menu">
 				<i class="fas fa-bars" id="menu-button"></i>
 			</button>
 		</div>
-
-
 		<!--Menu content-->
 		<div id="menu">
 			<a id="close-button">&times;</a>
 			<ul class="menu-content">
-				<li><a href="/en/faq" class="menu-link">FAQ</a></li>
-				<li><a href="/en/races" class="menu-link" id="races-button">Races</a></li>
+				<li><a href="/it/informazioni" class="menu-link">Info</a></li>
+				<li><a href="/it/gare" class="menu-link" id="races-button">Gare</a></li>
 				<li><a href="https://sportotime.com/eng/event/1171" target="_blank" rel="noopener noreferrer"
-						class="menu-link">Registration</a></li>
-				<li><a href="/en/about" class="menu-link">About</a></li>
-				<li><a href="/en/contact-us" class="menu-link">Contact</a></li>
-				<li><a href="/sl/proge/go3v-28km" class="language-switch menu-link">SI</a>
+						class="menu-link">Iscrizioni</a></li>
+				<li><a href="/it/chi-siamo" class="menu-link">Chi siamo</a></li>
+				<li><a href="/it/contatti" class="menu-link">Contatti</a></li>
+				<li><a href="/sl/proge/go1v-12km" class="language-switch menu-link">SI</a>
 			</ul>
 		</div>
 	</header>
+
 	<div class="flex-box">
 		<!--Showcase image-->
 		<section>
 			<div class="showcase-image">
-				<img src="../../assets/images/showcase-10-m.jpg" 
-				srcset="../../assets/images/showcase-10-m.jpg 650w,
-				../../assets/images/showcase-10.jpg 750w"
+				<img src="../../assets/images/showcase-7-m.jpg" 
+				srcset="../../assets/images/showcase-7-m.jpg 650w,
+				../../assets/images/showcase-7.jpg 750w"
 				sizes="100vw"
-				alt="Tek treh vrhov - Go3V 28km"
+				alt="Tek treh vrhov - Go1V 12km"
 				class="image-center">
 				<div class="text-wrap grid">
 					<span class="showcase-title content-wrap">
-						Go3V - 28 km
+						Go1V - 12 km
 					</span>
 				</div>
 			</div>
@@ -74,110 +72,78 @@
 		<!--section-D-->
 		<section class="section-d grid flex-item">
 			<div class="content-wrap">
-				<p class="opening">A race for running enthusiasts looking for a challenge. Go3V trail will lead you over
-					the summit of Mt. Škabrijel and through the cavern of Sveta Gora. Finally, you will take a raft over
-					the Soča river and reach the ridge of Mt. Sabotin.</p>
-
+				<p class="opening">This year Go1V takes you to the summit of Sveta Gora.</p>
 				<ul class="info-container">
-					<li>Distance: <b>28 km</b></li>
-					<li>Elevation: <b>1675 m</b></li>
-					<li>Refreshment stations: <b>6</b></li>
+					<li>Distance: <b>12 km</b></li>
+					<li>Elevation: <b>700 m</b></li>
+					<li>Refreshment stations: <b>3</b></li>
 					<li>Date: <b>10th October 2020</b></li>
-					<li>Start: <b>9.00</b>, <i>Solkan Kayak Center</i></li>
+					<li>Start: <b>9.30</b>, <i>Solkan Kayak Center</i></li>
 				</ul>
 
 				<p class="top-padding">
-					Download <a href="/assets/gpx/Go3V_28km.gpx.zip">GPX 28 km</a>
+					Download <a href="/assets/gpx/Go1V_12km.gpx.zip">GPX 12 km</a>
 				</p>
-
-				<h2>Time limit</h2>
-				<ul class="equipment">
-					<li><b>13.00</b> Solkan Kayak Center (16km / 4 hours)</li>
-					<li><b>16.00</b> Finish line (7 hours)</li>
-				</ul>
 
 				<h2>Obligatory equipment</h2>
 				<ul class="equipment">
 					<li>1. Race number (fully visible)</li>
 					<li>2. Water bottle (camel bag, bottle, soft flask etc.)</li>
-					<li>3. Eko cup (refreshment stations don't serve plastic cups)</li>
-					<li>4. Mobile phone (silent mode)</li>
-					<li>5. Emergency blanket</li>
-					<li>6. First aid kit</li>
-					<li>7. Wind jacket</li>
-					<li>8. Headlamp</li>
+					<li>3. Mobile phone (silent mode)</li>
 					<li class="small-text">* Additional gear might be announced on our Facebook few days before the
 						event.</li>
 				</ul>
 
-				<h2>Recommended equipment</h2>
-				<ul class="equipment">
-					<li>1. Trekking poles</li>
-					<li>2. Energy gels (marked with runner's race number)</li>
-				</ul>
-
 				<h2>Entry fee</h2>
 				<ul class="price">
-					<li>until 1st July 2020: <b>20 €</b></li>
-					<li>until 30th September 2020: <b>29 €</b></li>
-					<li>until the day of the event: <b>45 €</b></li>
+					<li>until 1st July 2020: <b>15 €</b></li>
+					<li>until 30th September 2020: <b>20 €</b></li>
+					<li>until the day of the event: <b>25 €</b></li>
 					<li class="small-text">* If registrations are not filled up you can register on the day of the
-						event. In this case we cannot guarantee you will receive a gift pack.
-					</li>
+						event. In this case we cannot guarantee you will receive a gift pack.</li>
 				</ul>
+
 				<ul class="accordian top-padding">
 					<li>
 						<a class="toggle" href="javascript:void(0);">+ General conditions</a>
 						<ul class="inner  top-padding">
 							<li>1. Udeleženci so nezgodno zavarovani pri Zavarovalnici Sava.</li>
-							<li>2. Tekači morajo biti vso pot na uradni progi. Odgovornost vsakega tekača je, da pozna
+							<li>2. Tekači morajo vso pot biti na uradni progi. Odgovornost vsakega tekača je, da pozna
 								potek proge in je seznanjen z uradnimi označbami (zemljevidi so dosegljivi na spletni
 								strani). Udeleženci, ki se oddaljijo od uradne proge ali jo namerno krajšajo bodo
 								avtomatično diskvalificirani.</li>
-							<li>3. Na nekaterih delih trasa poteka po cestah, na katerih morate upoštevati veljavne
+							<li>3. Na nekaterih delih trasa poteka po cestah na katerih morate upoštevati veljavne
 								cestno prometne predpise in se obnašati kot predpisuje zakon za vse udeležence v
 								prometu.</li>
-							<li>4. Samo tekačem s Startno številko na vidnem mestu bo omogočen dostop do okrepčevalnice.
+							<li>4. Samo tekačem s startno številko na vidnem mestu bo omogočen dostop do okrepčevalnice.
 								Hrano in pijačo je treba pojesti in popiti na mestu okrepčevalnice.</li>
 							<li>5. Uporaba smučarskih palic je dovoljena vsem tekačem! (Rule 251 that replaces Rule 251
-								(Mountain Races) and Rule 252 (Trail Races) of the IAAF Competition Rules (NEW Rule
+								(Mountain Gare) and Rule 252 (Trail Gare) of the IAAF Competition Rules (NEW Rule
 								approved by the IAAF Council in force from 1 January 2019))</li>
 							<li>6. Na določenih točkah bodo člani GRS in drugih medicinskih služb, ki bodo v stalnem
 								kontaktu z vodstvom tekme. Vzdolž trase na najbolj izpostavljenih mestih bodo
 								prostovoljci, ki bodo preverjali prisotnost udeležencev.</li>
-							<li>7. Udeleženci morajo upoštevati osnovna načela obnašanja v naravi in ne smejo puščati
+							<li>7. Udeleženci morajo upoštevati osnovna načela obnašanja v naravi, ne smejo puščati
 								odpadkov! Odpadke lahko odložijo na mestih, predvidenih za to. Udeleženec, ki tega
 								pravila ne bo upošteval in ga kontrola pri tem opazi, bo avtomatsko diskvalificiran. Vsi
-								energijski geli, tablice,čokoladice morajo biti označene s startno številko tekmovalca.
+								energijski geli, tablice, čokoladice morajo biti označene s startno številko tekmovalca.
 							</li>
-							<li>8. Tekmovanje se izvede v vseh vremenskih pogojih. Izjema so samo situacije, ko je lahko
-								ogrožena varnost udeležencev (izjemno neurje, naravna katastrofa itd.). V takem primeru
-								o odpovedi odloča vrhovna sodniška komisija. </li>
+							<li>8. Tekmovanje se izvede v vsakem vremenu. Izjema so samo situacije, ko je lahko ogrožena
+								varnost udeležencev (izjemno neurje, naravna katastrofa…). V takem primeru o odpovedi
+								odloča vrhovna sodniška komisija. </li>
 							<li>9. Udeleženec se zaveda in se strinja, da je tovrstna aktivnost organizirana in vodena s
-								strani organizatorja in je opredeljena kot "ekstremen šport". Kot taka je podvržena
-								nevarnostim in tveganjem z vključujočimi poškodbami kot tudi smrti udeležencev.</li>
+								strani organizatorja in je opredeljena kot "ekstremen šport" in je kot taka podvržena
+								nevarnostim in tveganjem, z vključujočimi poškodbami in lahko s smrtjo udeležencev.</li>
 							<li>10. Prostovoljna prijava na tekmo se razume kot strinjanje s pravili tekme in vseh
 								sprememb, ki jih mora organizator sproti po potrebi izvesti.</li>
-							<li>11. Zaradi izjemne zahtevnosti tekmovanja mlajši od 18 let ne morejo tekmovati na 28 in
-								58 km
-								razdalji.</li>
-						</ul>
-					</li>
-					<li>
-						<a class="toggle" href="javascript:void(0);">+ Contact</a>
-						<ul class="inner  top-padding">
-							<li>Miha Repič</li>
-							<li>+386 (0)68187250</li>
-							<li><a href="mailto:mihamrr@gmail.com ">mihamrr@gmail.com</a></li>
 						</ul>
 					</li>
 				</ul>
 
 				<div class="center top-padding">
-					<a href="https://sportotime.com/eng/race/3579/race_registration" target="_blank"
-						rel="noopener noreferrer" class="btn">REGISTER NOW</a>
-					<p class="top-padding">Or check out other <a href="/en/races">races</a>.
-					</p>
+					<a href="https://sportotime.com/eng/race/3578" target="_blank" rel="noopener noreferrer"
+						class="btn">REGISTER NOW</a>
+					<p class="top-padding">Or check out other <a href="/it/gare">gare</a>.
 				</div>
 			</div>
 		</section>
@@ -193,6 +159,7 @@
 						<i class="fab fa-facebook-square"></i></a>
 				</div>
 			</div>
+
 		</section>
 
 		<!--Footer-->
