--- a/it/gare/go3v-28km.html
+++ b/it/gare/go3v-28km.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="sl">
+<html lang="it">
 
 <head>
 	<!-- Global site tag (gtag.js) - Google Analytics -->
@@ -15,10 +15,10 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<meta name="keywords" content="trail, tek, treh, vrhov, slovenija, sabotin, škabrijel, sveta gora">
+	<meta name="keywords" content="trail, running, treh, vrhov, slovenija, sabotin, skabrijel, sveta gora">
 	<meta name="description"
-		content="Tek treh vrhov 2020 | 12km, 28km, 58km | tekaška preizkušnja med tremi vrhovi ob dolini reke Soče, 10. oktober 2020">
-	<title>Tek treh vrhov | Go3v 28km</title>
+		content="Tek treh vrhov 2020 | 12km, 28km, 58km | trail running over three summits surrounding the valley of Soča river in the Western Slovenia, 10th October 2020">
+	<title>Tek treh vrhov | Go3V 28km</title>
 	<!--Styles-->
 	<link rel="stylesheet" href="/styles/main.css">
 	<link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
@@ -31,27 +31,26 @@
 	<!--Navigation bar-->
 	<header id="navigation-bar">
 		<div class="home-container">
-			<a href="/" id="logo">T3V</a> </div>
+			<a href="/en" id="logo">T3V</a>
+		</div>
 		<div class="menu-icon-container">
 			<button class="menu-icon" data-target="menu">
 				<i class="fas fa-bars" id="menu-button"></i>
 			</button>
 		</div>
+
+
 		<!--Menu content-->
 		<div id="menu">
 			<a id="close-button">&times;</a>
 			<ul class="menu-content">
-				<li><a href="/sl/info" class="menu-link">Info</a></li>
-				<li><a href="/sl/proge" class="menu-link" id="races-button">Proge</a></li>
-				<li><a href="https://sportotime.com/slv/dogodek/1171" target="_blank" rel="noopener noreferrer"
-						class="menu-link">Prijava</a></li>
-				<li><a href="/sl/o-nas" class="menu-link">O nas</a></li>
-				<li><a href="/sl/kontakt" class="menu-link">Kontakt</a></li>
-				<li>
-					<a href="/en/races/go3v-28km" class="language-switch menu-link">EN</a>
-					<span>/</span>					
-					<a href="/it/gare/go3v-28km" class="language-switch menu-link">IT</a>
-				</li>
+				<li><a href="/it/informazioni" class="menu-link">Info</a></li>
+				<li><a href="/it/gare" class="menu-link" id="races-button">Gare</a></li>
+				<li><a href="https://sportotime.com/eng/event/1171" target="_blank" rel="noopener noreferrer"
+						class="menu-link">Iscrizioni</a></li>
+				<li><a href="/it/chi-siamo" class="menu-link">Chi siamo</a></li>
+				<li><a href="/it/contatti" class="menu-link">Contatti</a></li>
+				<li><a href="/sl/proge/go3v-28km" class="language-switch menu-link">SI</a>
 			</ul>
 		</div>
 	</header>
@@ -75,96 +74,60 @@
 		<!--section-D-->
 		<section class="section-d grid flex-item">
 			<div class="content-wrap">
-				<p class="opening">Proga za vsakega, ki si želi težjih izzivov. Go3V trail vas po ponesel čez vrh
-					Škabrijela, skozi
-					kaverno Svete Gore in z raftom čez Sočo do Sabotina.</p>
+				<p class="opening">A race for running enthusiasts looking for a challenge. Go3V trail will lead you over
+					the summit of Mt. Škabrijel and through the cavern of Sveta Gora. Finally, you will take a raft over
+					the Soča river and reach the ridge of Mt. Sabotin.</p>
 
 				<ul class="info-container">
-					<li>Dolžina: <b>28 km</b></li>
-					<li>Vzpon: <b>1675 m</b></li>
-					<li>Okrepčevalnice: <b>6</b></li>
-					<li>Datum: <b>10. oktober 2020</b></li>
-					<li>Start: <b>9.00</b>, <i>Kajak center Solkan</i></li>
+					<li>Distance: <b>28 km</b></li>
+					<li>Elevation: <b>1675 m</b></li>
+					<li>Refreshment stations: <b>6</b></li>
+					<li>Date: <b>10th October 2020</b></li>
+					<li>Start: <b>9.00</b>, <i>Solkan Kayak Center</i></li>
 				</ul>
 
 				<p class="top-padding">
-					Prenesi <a href="/assets/gpx/Go3V_28km.gpx.zip">GPX 28 km</a>
+					Download <a href="/assets/gpx/Go3V_28km.gpx.zip">GPX 28 km</a>
 				</p>
 
-				<h2>Časovne omejitve</h2>
+				<h2>Time limit</h2>
 				<ul class="equipment">
-					<li><b>13.00</b> Kajak Center Solkan (16km / 4 ure)</li>
-					<li><b>16.00</b> Cilj (7 ur)</li>
+					<li><b>13.00</b> Solkan Kayak Center (16km / 4 hours)</li>
+					<li><b>16.00</b> Finish line (7 hours)</li>
 				</ul>
 
-				<h2>Obvezna oprema</h2>
+				<h2>Obligatory equipment</h2>
 				<ul class="equipment">
-					<li>1. Startna številka (na vidnem mestu)</li>
-					<li>2. Posoda za vodo (camel bag, bottle, soft flask itd.)</li>
-					<li>3. Eko lonček (na okrepčevalnicah ni plastičnih lončkov)</li>
-					<li>4. Mobilni telefon (utišan)</li>
-					<li>5. Astro folija</li>
-					<li>6. Prva pomoč</li>
-					<li>7. Vetrna jakna</li>
-					<li>8. Čelna svetilka</li>
-					<li class="small-text">* Morebitna dodatna oprema bo objavljena v dneh pred prireditvijo na naši
-						Facebook strani.</li>
+					<li>1. Race number (fully visible)</li>
+					<li>2. Water bottle (camel bag, bottle, soft flask etc.)</li>
+					<li>3. Eko cup (refreshment stations don't serve plastic cups)</li>
+					<li>4. Mobile phone (silent mode)</li>
+					<li>5. Emergency blanket</li>
+					<li>6. First aid kit</li>
+					<li>7. Wind jacket</li>
+					<li>8. Headlamp</li>
+					<li class="small-text">* Additional gear might be announced on our Facebook few days before the
+						event.</li>
 				</ul>
 
-				<h2>Priporočljiva oprema</h2>
+				<h2>Recommended equipment</h2>
 				<ul class="equipment">
-					<li>1. Pohodne palice</li>
-					<li>2. Energijske tablice, geli (označeni s startno številko)</li>
+					<li>1. Trekking poles</li>
+					<li>2. Energy gels (marked with runner's race number)</li>
 				</ul>
 
-				<h2>Cena</h2>
+				<h2>Entry fee</h2>
 				<ul class="price">
-					<li>do 1. julija 2020: <b>20 €</b></li>
-					<li>do 30. septembra 2020: <b>29 €</b></li>
-					<li>do dneva dogodka: <b>45 €</b></li>
-					<li class="small-text">* V primeru prostih mest je prijava na dan prireditve možna, vendar vam v tem
-						primeru ne moremo zagotoviti darilnega paketa.</li>
+					<li>until 1st July 2020: <b>20 €</b></li>
+					<li>until 30th September 2020: <b>29 €</b></li>
+					<li>until the day of the event: <b>45 €</b></li>
+					<li class="small-text">* If registrations are not filled up you can register on the day of the
+						event. In this case we cannot guarantee you will receive a gift pack.
+					</li>
 				</ul>
-
 				<ul class="accordian top-padding">
 					<li>
-						<a class="toggle" href="javascript:void(0);">+ Opis proge</a>
-						<ul class="inner  top-padding">
-							<li>
-								<p>Proga 28 km poteka preko treh vrhov nad Novo Gorico - Škabrijel, Sveta gora in
-									Sabotin. <br><br> Start je v Kajak centru Solkan, od koder se proga nadaljuje po
-									pešpoti ob Soči pod železniški most. Po asfaltni poti se vzpnemo nato v Solkan.
-									Skozi center Solkana vodi pot mimo cerkve in pod solkansko obvoznico proti
-									Škabrijelu oz. sedlu vratca (okrepčevalnica). Po strelskih jarkih se vzpnemo na
-									Škabrijel (646 v.m). <br><br> Nadaljujemo po grebenu Škabrijela. Sledi spust do
-									ceste Nova Gorica – Lokve (prevala). Po 300 metrih pot zavije pri gostilni Panorama
-									(okrepčevalnica) desno za Sveto goro. Po 300 metrih asfaltne poti zavijemo na
-									planinsko/kolesarsko pot proti kaverni, kjer si nadanemo čelno svetilko in previdno
-									nadaljujemo skozi 280 metrov dolgo kaverno. Sledi vzpon po planinski poti na severni
-									strani do kipa sv. Frančiška in nadaljevanje po grebenu do bazilike na Sveti gori
-									(okrepčevalnica). <br><br>Pot nadaljujemo mimo bazilike preko spusta po stopnicah na
-									makadamsko parkirišče. Od tam zavijemo levo na kolesarsko »downhill« progo. Spust
-									nadaljujemo po planski poti do gostilne Prevala (okrepčevalnica) in nato po asfaltni
-									cesti v smeri Grgarja, nakar po 100 metrih skrenemo desno, kjer pridemo na
-									kolesarsko »downhill« progo. Sledi spust, ki je v slabem vremenu lahko tudi spolzek
-									in nevaren, zato previdnost ni odveč. Spustimo se do restavracije Žogica in
-									nadaljujemo do Solkanskega mosta, kjer se spustimo desno pod kamniti železniški most
-									ter nadaljujemo proti Kajak centru Solkan (okrepčevalnica). Pri okrepčevalnici se
-									vkrcamo na raft, s katerim prečkamo reko Sočo. Po kratkem vzponu pridemo do
-									kolesarske ceste in po 2 kilometrih zavijemo levo na markirano pot, ki vodi na
-									Sabotin. Po slabem kilometru vzpenjanja zavijemo levo do Sv. Valentina
-									(okrepčevalnica). Nadaljujemo po grebenu do vrha Sabotina (609 v.m), od koder sledi
-									spust, ki nas pripelje preko Italije nazaj na cestni most čez Sočo v Solkanu. Iz
-									Solkana se spustimo na pot ob Soči in nadaljujemo do cilja v Kajak centru Solkan.
-								</p> <br>
-								<p class="small-text">* Zahtevnejši odseki so kamniti (Sabotin), blatni (spust s
-									Škabrijela), spolzki (kaverna Sveta gora, Sabotin).
-								</p>
-							</li>
-						</ul>
-					</li>
-					<li>
-						<a class="toggle" href="javascript:void(0);">+ Splošni pogoji</a>
+						<a class="toggle" href="javascript:void(0);">+ General conditions</a>
 						<ul class="inner  top-padding">
 							<li>1. Udeleženci so nezgodno zavarovani pri Zavarovalnici Sava.</li>
 							<li>2. Tekači morajo biti vso pot na uradni progi. Odgovornost vsakega tekača je, da pozna
@@ -177,7 +140,7 @@
 							<li>4. Samo tekačem s Startno številko na vidnem mestu bo omogočen dostop do okrepčevalnice.
 								Hrano in pijačo je treba pojesti in popiti na mestu okrepčevalnice.</li>
 							<li>5. Uporaba smučarskih palic je dovoljena vsem tekačem! (Rule 251 that replaces Rule 251
-								(Mountain Races) and Rule 252 (Trail Races) of the IAAF Competition Rules (NEW Rule
+								(Mountain Gare) and Rule 252 (Trail Gare) of the IAAF Competition Rules (NEW Rule
 								approved by the IAAF Council in force from 1 January 2019))</li>
 							<li>6. Na določenih točkah bodo člani GRS in drugih medicinskih služb, ki bodo v stalnem
 								kontaktu z vodstvom tekme. Vzdolž trase na najbolj izpostavljenih mestih bodo
@@ -201,26 +164,26 @@
 						</ul>
 					</li>
 					<li>
-						<a class="toggle" href="javascript:void(0);">+ Kontakt</a>
+						<a class="toggle" href="javascript:void(0);">+ Contatti</a>
 						<ul class="inner  top-padding">
 							<li>Miha Repič</li>
 							<li>+386 (0)68187250</li>
-							<li><a href="mailto:mihamrr@gmail.com">mihamrr@gmail.com</a></li>
+							<li><a href="mailto:mihamrr@gmail.com ">mihamrr@gmail.com</a></li>
 						</ul>
 					</li>
 				</ul>
 
 				<div class="center top-padding">
-					<a href="https://sportotime.com/slv/dirka/3579/prijava_na_dirko" target="_blank"
-						rel="noopener noreferrer" class="btn">PRIJAVITE SE</a>
-					<p class="top-padding">Ali pa si oglejte še ostale <a href="/sl/proge">proge</a>.
+					<a href="https://sportotime.com/eng/race/3579/race_registration" target="_blank"
+						rel="noopener noreferrer" class="btn">REGISTER NOW</a>
+					<p class="top-padding">Or check out other <a href="/it/gare">gare</a>.
 					</p>
 				</div>
 			</div>
 		</section>
 
 		<!--section-C-->
-		<section class="section-c grid">
+		<section class="section-c" class="grid">
 			<div class="content-wrap">
 				<div class="icon-container">
 					<a href="https://www.instagram.com/go4trail/" target="_blank" rel="noopener noreferrer" class="icon"
