--- a/it/gare/index.html
+++ b/it/gare/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="sl">
 
 <head>
 	<!-- Global site tag (gtag.js) - Google Analytics -->
@@ -18,14 +18,13 @@
 	<meta name="keywords" content="trail, running, treh, vrhov, slovenija, sabotin, skabrijel, sveta gora">
 	<meta name="description"
 		content="Tek treh vrhov 2020 | 12km, 28km, 58km | trail running over three summits surrounding the valley of Soča river in the Western Slovenia, 10th October 2020">
-	<title>Tek treh vrhov | About</title>
+	<title>Tek treh vrhov | Gare</title>
 	<!--Styles-->
 	<link rel="stylesheet" href="/styles/main.css">
 	<link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto:300&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Martel+Sans:800&display=swap" rel="stylesheet">
-
 </head>
 
 <body>
@@ -43,14 +42,13 @@
 		<div id="menu">
 			<a id="close-button">&times;</a>
 			<ul class="menu-content">
-				<li><a href="faq" class="menu-link">FAQ</a></li>
-				<li><a href="races" class="menu-link" id="races-button">Races</a></li>
+				<li><a href="/it/informazioni" class="menu-link">Info</a></li>
+				<li><a href="/it/gare" class="menu-link" id="races-button">Gare</a></li>
 				<li><a href="https://sportotime.com/eng/event/1171" target="_blank" rel="noopener noreferrer"
-						class="menu-link">Registration</a></li>
-				<li><a href="about" class="menu-link">About</a></li>
-				<li><a href="contact-us" class="menu-link">Contact</a></li>
-				<li><a href="/sl/o-nas" class="language-switch menu-link">SI</a>
-				</li>
+						class="menu-link">Iscrizioni</a></li>
+				<li><a href="/it/chi-siamo" class="menu-link">Chi siamo</a></li>
+				<li><a href="/it/contatti" class="menu-link">Contatti</a></li>
+				<li><a href="/sl/proge" class="language-switch menu-link">SI</a></li>
 			</ul>
 		</div>
 	</header>
@@ -59,28 +57,61 @@
 		<!--Showcase image-->
 		<section>
 			<div class="showcase-image">
-				<img src="../assets/images/showcase-9-m.jpg" 
-					srcset="../assets/images/showcase-9-m.jpg 650w,
-					../assets/images/showcase-9.jpg 750w"
-					sizes="100vw"
-					alt="Tek treh vrhov - About us">
+				<img src="../../assets/images/showcase-11.jpg" alt="Tek treh vrhov - races" class="image-center">
 				<div class="text-wrap grid">
 					<span class="showcase-title content-wrap">
-						About
+						Gare
 					</span>
 				</div>
 			</div>
 		</section>
-		<!--section-D-->
-		<section class="section-d grid flex-item">
-			<div class="content-wrap">
-				<p class="main-text">Tek treh vrhov (T3V) started as all good things do. With a group of friends doing
-					together what they like the most. We love to run. Especially when the trail goes uphill. That is why
-					we decided to bring you a unique running experience. From the picturesque ridge of Mt. Sabotin and
-					forest paths on Mt. Škabrijel to the cavern of Sveta Gora and stunning views of the Soča river. We
-					wanted to capture the diversity that our homeground has to offer. And what better way to experience
-					it than by going on a journey across three summits.</p>
-			</div>
+		<!--section-A-->
+		<!--section-A-->
+		<section class="section-a flex-item">
+			<ul class="image-grid">
+				<li class="content-wrap">
+					<p class="opening">Are you a seasoned trail runner, a weekend warior or just eager to try
+						something new? We' ve got you
+						covered! Check out the races we have prepared for you.</p>
+				</li>
+				<li id="race-1">
+					<a href="./goriski-tek">
+						<div class="card-content">
+							<h1 class="card-title">Gorica run</h1>
+							<p> 4, 10 in 15 km |
+								Charity run
+							</p>
+						</div>
+					</a>
+				</li>
+				<li id="race-2">
+					<a href="./go1v-12km">
+						<div class="card-content">
+							<h1 class="card-title">Go1V</h1>
+							<p> 12 km | 700 m
+							</p>
+						</div>
+					</a>
+				</li>
+				<li id="race-3">
+					<a href="./go3v-28km">
+						<div class="card-content">
+							<h1 class="card-title">Go3V</h1>
+							<p> 28 km | 1675 m
+							</p>
+						</div>
+					</a>
+				</li>
+				<li id="race-4">
+					<a href="./ultra-58km">
+						<div class="card-content">
+							<h1 class="card-title">Počasna a drzna ultra</h1>
+							<p> 58 km | 2864 m
+							</p>
+						</div>
+					</a>
+				</li>
+			</ul>
 		</section>
 
 		<!--section-C-->
@@ -94,7 +125,6 @@
 						<i class="fab fa-facebook-square"></i></a>
 				</div>
 			</div>
-
 		</section>
 
 		<!--Footer-->
