--- a/it/gare/ultra-58km.html
+++ b/it/gare/ultra-58km.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
 
 <head>
 	<!-- Global site tag (gtag.js) - Google Analytics -->
@@ -18,55 +18,54 @@
 	<meta name="keywords" content="trail, running, treh, vrhov, slovenija, sabotin, skabrijel, sveta gora">
 	<meta name="description"
 		content="Tek treh vrhov 2020 | 12km, 28km, 58km | trail running over three summits surrounding the valley of Soča river in the Western Slovenia, 10th October 2020">
-	<title>Tek treh vrhov | Go3V 28km</title>
+	<title>Tek treh vrhov | Počasna a drzna Ultra 58km</title>
 	<!--Styles-->
 	<link rel="stylesheet" href="/styles/main.css">
 	<link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto:300&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Martel+Sans:800&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
 	<!--Navigation bar-->
 	<header id="navigation-bar">
 		<div class="home-container">
-			<a href="/en" id="logo">T3V</a>
-		</div>
+			<a href="/en" id="logo">T3V</a> </div>
 		<div class="menu-icon-container">
 			<button class="menu-icon" data-target="menu">
 				<i class="fas fa-bars" id="menu-button"></i>
 			</button>
 		</div>
-
-
 		<!--Menu content-->
 		<div id="menu">
 			<a id="close-button">&times;</a>
 			<ul class="menu-content">
-				<li><a href="/en/faq" class="menu-link">FAQ</a></li>
-				<li><a href="/en/races" class="menu-link" id="races-button">Races</a></li>
+				<li><a href="/it/informazioni" class="menu-link">Info</a></li>
+				<li><a href="/it/gare" class="menu-link" id="races-button">Gare</a></li>
 				<li><a href="https://sportotime.com/eng/event/1171" target="_blank" rel="noopener noreferrer"
-						class="menu-link">Registration</a></li>
-				<li><a href="/en/about" class="menu-link">About</a></li>
-				<li><a href="/en/contact-us" class="menu-link">Contact</a></li>
-				<li><a href="/sl/proge/go3v-28km" class="language-switch menu-link">SI</a>
+						class="menu-link">Iscrizioni</a></li>
+				<li><a href="/it/chi-siamo" class="menu-link">Chi siamo</a></li>
+				<li><a href="/it/contatti" class="menu-link">Contatti</a></li>
+				<li><a href="/sl/proge/ultra-58km" class="language-switch menu-link">SI</a>
 			</ul>
 		</div>
 	</header>
+
 	<div class="flex-box">
 		<!--Showcase image-->
 		<section>
 			<div class="showcase-image">
-				<img src="../../assets/images/showcase-10-m.jpg" 
-				srcset="../../assets/images/showcase-10-m.jpg 650w,
-				../../assets/images/showcase-10.jpg 750w"
-				sizes="100vw"
-				alt="Tek treh vrhov - Go3V 28km"
-				class="image-center">
+				<img src="../../assets/images/showcase-12-m.jpg" 
+					srcset="../../assets/images/showcase-12-m.jpg 650w,
+					../../assets/images/showcase-12.jpg 750w"
+					sizes="100vw"
+					alt="Tek treh vrhov - Počasna a drzna ultra 58 km"
+					class="image-center">
 				<div class="text-wrap grid">
 					<span class="showcase-title content-wrap">
-						Go3V - 28 km
+						Počasna a drzna ultra - 58 km
 					</span>
 				</div>
 			</div>
@@ -74,26 +73,32 @@
 		<!--section-D-->
 		<section class="section-d grid flex-item">
 			<div class="content-wrap">
-				<p class="opening">A race for running enthusiasts looking for a challenge. Go3V trail will lead you over
-					the summit of Mt. Škabrijel and through the cavern of Sveta Gora. Finally, you will take a raft over
-					the Soča river and reach the ridge of Mt. Sabotin.</p>
+				<p class="opening">Ultra race for experienced runners eager to test themselves on our longest trail. You
+					will cross the summits of Mt. Škabrijel, Sveta Gora, Mt. Korada and Mt. Sabotin.</p>
 
 				<ul class="info-container">
-					<li>Distance: <b>28 km</b></li>
-					<li>Elevation: <b>1675 m</b></li>
+					<li>Distance: <b>58 km</b></li>
+					<li>Elevation: <b>2864 m</b></li>
 					<li>Refreshment stations: <b>6</b></li>
+					<li>Water stations: <b>3</b></li>
 					<li>Date: <b>10th October 2020</b></li>
-					<li>Start: <b>9.00</b>, <i>Solkan Kayak Center</i></li>
+					<li>Start: <b>7.00</b>, <i>Solkan Kayak Center</i></li>
 				</ul>
 
 				<p class="top-padding">
-					Download <a href="/assets/gpx/Go3V_28km.gpx.zip">GPX 28 km</a>
+					Download <a href="/assets/gpx/Ultra_58km.gpx.zip">GPX 58 km</a>
 				</p>
 
 				<h2>Time limit</h2>
 				<ul class="equipment">
-					<li><b>13.00</b> Solkan Kayak Center (16km / 4 hours)</li>
-					<li><b>16.00</b> Finish line (7 hours)</li>
+					<li><b>13.30</b> Kanal (30km / 6 hours 30 minutes)</li>
+					<li><b>17.00</b> Vrhovlje (45km / 10 hours) - the ridge on Mt. Sabotin will be closed and the
+						runners will take a bypass. Those who take a bypass cannot finish ahead of the runners who ran
+						on the ridge.</li>
+					<li><b>19.00</b> Finish line (58 km / 12 hours)</li>
+					<li class="small-text">* In case of bad weather and dangerous conditions the organiser can close the
+						ridge on Mt. Sabotin. Runners would have to take the bypass to avoid the ridge completely.
+					</li>
 				</ul>
 
 				<h2>Obligatory equipment</h2>
@@ -105,7 +110,7 @@
 					<li>5. Emergency blanket</li>
 					<li>6. First aid kit</li>
 					<li>7. Wind jacket</li>
-					<li>8. Headlamp</li>
+					<li>8. Headlamp with spare batteries</li>
 					<li class="small-text">* Additional gear might be announced on our Facebook few days before the
 						event.</li>
 				</ul>
@@ -118,9 +123,9 @@
 
 				<h2>Entry fee</h2>
 				<ul class="price">
-					<li>until 1st July 2020: <b>20 €</b></li>
-					<li>until 30th September 2020: <b>29 €</b></li>
-					<li>until the day of the event: <b>45 €</b></li>
+					<li>until 1st July 2020: <b>40 €</b></li>
+					<li>until 30th September 2020: <b>49 €</b></li>
+					<li>until the day of the event: <b>65 €</b></li>
 					<li class="small-text">* If registrations are not filled up you can register on the day of the
 						event. In this case we cannot guarantee you will receive a gift pack.
 					</li>
@@ -140,7 +145,7 @@
 							<li>4. Samo tekačem s Startno številko na vidnem mestu bo omogočen dostop do okrepčevalnice.
 								Hrano in pijačo je treba pojesti in popiti na mestu okrepčevalnice.</li>
 							<li>5. Uporaba smučarskih palic je dovoljena vsem tekačem! (Rule 251 that replaces Rule 251
-								(Mountain Races) and Rule 252 (Trail Races) of the IAAF Competition Rules (NEW Rule
+								(Mountain Gare) and Rule 252 (Trail Gare) of the IAAF Competition Rules (NEW Rule
 								approved by the IAAF Council in force from 1 January 2019))</li>
 							<li>6. Na določenih točkah bodo člani GRS in drugih medicinskih služb, ki bodo v stalnem
 								kontaktu z vodstvom tekme. Vzdolž trase na najbolj izpostavljenih mestih bodo
@@ -164,19 +169,19 @@
 						</ul>
 					</li>
 					<li>
-						<a class="toggle" href="javascript:void(0);">+ Contact</a>
+						<a class="toggle" href="javascript:void(0);">+ Contatti</a>
 						<ul class="inner  top-padding">
-							<li>Miha Repič</li>
-							<li>+386 (0)68187250</li>
-							<li><a href="mailto:mihamrr@gmail.com ">mihamrr@gmail.com</a></li>
+							<li>Renato Lešnik</li>
+							<li>+386 (0)70879914</li>
+							<li><a href="mailto:renato.lesnik@gmail.com ">renato.lesnik@gmail.com</a></li>
 						</ul>
 					</li>
 				</ul>
 
 				<div class="center top-padding">
-					<a href="https://sportotime.com/eng/race/3579/race_registration" target="_blank"
+					<a href="https://sportotime.com/eng/race/3580/race_registration" target="_blank"
 						rel="noopener noreferrer" class="btn">REGISTER NOW</a>
-					<p class="top-padding">Or check out other <a href="/en/races">races</a>.
+					<p class="top-padding">Or check out other <a href="/it/gare">gare</a>.
 					</p>
 				</div>
 			</div>
@@ -200,6 +205,7 @@
 			<div>Tek treh vrhov | by <a href="https://teowinkler.com" target="_blank" rel="noopener noreferrer">Teo
 					Winkler</a></div>
 		</footer>
+
 	</div>
 
 	<!--Scripts-->
