--- a/it/informazioni.html
+++ b/it/informazioni.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
 
 <head>
 	<!-- Global site tag (gtag.js) - Google Analytics -->
@@ -18,7 +18,7 @@
 	<meta name="keywords" content="trail, running, treh, vrhov, slovenija, sabotin, skabrijel, sveta gora">
 	<meta name="description"
 		content="Tek treh vrhov 2020 | 12km, 28km, 58km | trail running over three summits surrounding the valley of Soča river in the Western Slovenia, 10th October 2020">
-	<title>Tek treh vrhov | Go3V 28km</title>
+	<title>Tek treh vrhov | Info</title>
 	<!--Styles-->
 	<link rel="stylesheet" href="/styles/main.css">
 	<link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
@@ -38,35 +38,35 @@
 				<i class="fas fa-bars" id="menu-button"></i>
 			</button>
 		</div>
-
-
 		<!--Menu content-->
 		<div id="menu">
 			<a id="close-button">&times;</a>
 			<ul class="menu-content">
-				<li><a href="/en/faq" class="menu-link">FAQ</a></li>
-				<li><a href="/en/races" class="menu-link" id="races-button">Races</a></li>
+				<li><a href="informazioni" class="menu-link">Info</a></li>
+				<li><a href="gare" class="menu-link" id="races-button">Gare</a></li>
 				<li><a href="https://sportotime.com/eng/event/1171" target="_blank" rel="noopener noreferrer"
-						class="menu-link">Registration</a></li>
-				<li><a href="/en/about" class="menu-link">About</a></li>
-				<li><a href="/en/contact-us" class="menu-link">Contact</a></li>
-				<li><a href="/sl/proge/go3v-28km" class="language-switch menu-link">SI</a>
+						class="menu-link">Iscrizioni</a></li>
+				<li><a href="chi-siamo" class="menu-link">Chi siamo</a></li>
+				<li><a href="contatti" class="menu-link">Contatti</a></li>
+				<li><a href="/sl/info" class="language-switch menu-link">SI</a>
+				</li>
 			</ul>
 		</div>
 	</header>
+
 	<div class="flex-box">
 		<!--Showcase image-->
 		<section>
 			<div class="showcase-image">
-				<img src="../../assets/images/showcase-10-m.jpg" 
-				srcset="../../assets/images/showcase-10-m.jpg 650w,
-				../../assets/images/showcase-10.jpg 750w"
-				sizes="100vw"
-				alt="Tek treh vrhov - Go3V 28km"
-				class="image-center">
+				<img src="../assets/images/showcase-3-m.jpg" 
+					srcset="../assets/images/showcase-3-m.jpg 650w,
+					../assets/images/showcase-3.jpg 750w"
+					sizes="100vw"
+					alt="Tek treh vrhov - Info"
+					class="image-center">
 				<div class="text-wrap grid">
 					<span class="showcase-title content-wrap">
-						Go3V - 28 km
+						Info
 					</span>
 				</div>
 			</div>
@@ -74,60 +74,63 @@
 		<!--section-D-->
 		<section class="section-d grid flex-item">
 			<div class="content-wrap">
-				<p class="opening">A race for running enthusiasts looking for a challenge. Go3V trail will lead you over
-					the summit of Mt. Škabrijel and through the cavern of Sveta Gora. Finally, you will take a raft over
-					the Soča river and reach the ridge of Mt. Sabotin.</p>
-
-				<ul class="info-container">
-					<li>Distance: <b>28 km</b></li>
-					<li>Elevation: <b>1675 m</b></li>
-					<li>Refreshment stations: <b>6</b></li>
-					<li>Date: <b>10th October 2020</b></li>
-					<li>Start: <b>9.00</b>, <i>Solkan Kayak Center</i></li>
-				</ul>
-
-				<p class="top-padding">
-					Download <a href="/assets/gpx/Go3V_28km.gpx.zip">GPX 28 km</a>
-				</p>
-
-				<h2>Time limit</h2>
-				<ul class="equipment">
-					<li><b>13.00</b> Solkan Kayak Center (16km / 4 hours)</li>
-					<li><b>16.00</b> Finish line (7 hours)</li>
-				</ul>
-
-				<h2>Obligatory equipment</h2>
-				<ul class="equipment">
-					<li>1. Race number (fully visible)</li>
-					<li>2. Water bottle (camel bag, bottle, soft flask etc.)</li>
-					<li>3. Eko cup (refreshment stations don't serve plastic cups)</li>
-					<li>4. Mobile phone (silent mode)</li>
-					<li>5. Emergency blanket</li>
-					<li>6. First aid kit</li>
-					<li>7. Wind jacket</li>
-					<li>8. Headlamp</li>
-					<li class="small-text">* Additional gear might be announced on our Facebook few days before the
-						event.</li>
-				</ul>
-
-				<h2>Recommended equipment</h2>
-				<ul class="equipment">
-					<li>1. Trekking poles</li>
-					<li>2. Energy gels (marked with runner's race number)</li>
-				</ul>
-
-				<h2>Entry fee</h2>
-				<ul class="price">
-					<li>until 1st July 2020: <b>20 €</b></li>
-					<li>until 30th September 2020: <b>29 €</b></li>
-					<li>until the day of the event: <b>45 €</b></li>
-					<li class="small-text">* If registrations are not filled up you can register on the day of the
-						event. In this case we cannot guarantee you will receive a gift pack.
-					</li>
-				</ul>
 				<ul class="accordian top-padding">
 					<li>
-						<a class="toggle" href="javascript:void(0);">+ General conditions</a>
+						<a class="toggle" href="javascript:void(0);">Where will the races start?</a>
+						<ul class="inner  top-padding">
+							<li>
+								<p>Go1V, Go3V and Počasna a drzna ultra will start at Solkan Kayak Center. Start of the
+									Gorica run will be on Bevk Square in Nova Gorica. </p>
+							</li>
+						</ul>
+					</li>
+
+					<li>
+						<a class="toggle" href="javascript:void(0);">When will the races start?</a>
+						<ul class="inner  top-padding">
+							<p>Gorica run will take place on 3th October at 10.00 am. The majority of races (Go1V, Go3V
+								and Počasna a drzna ultra) will take place on 10th October at 7.00 am (Počasna a drzna
+								ultra), 9.00 am (Go3V) and 9.30 (Go1V). </p>
+						</ul>
+					</li>
+					<li>
+						<a class="toggle" href="javascript:void(0);">Where can I register?</a>
+						<ul class="inner  top-padding">
+							<p> You can easily register through our <a href="https://sportotime.com/eng/event/1171"
+									target="_blank" rel="noopener noreferrer">website</a>. Fees depend on the time of
+								your registration. You can find more information under each race.
+							</p>
+						</ul>
+					</li>
+					<li>
+						<a class="toggle" href="javascript:void(0);">To which category do I belong?</a>
+						<ul class="inner  top-padding">
+							<p> The results will be split in men and women section as well as along three age groups: 18
+								to 35 years (2002 - 1985), 36 to 50 years (1984 - 1970) 51 years and more (1969 and
+								earlier).
+							</p>
+						</ul>
+					</li>
+					<li>
+						<a class="toggle" href="javascript:void(0);">Where can I see the results?</a>
+						<ul class="inner  top-padding">
+							<p> The results from 2019 are available on <a
+									href="https://www.sportotime.com/eng/event/964" target="_blank"
+									rel="noopener noreferrer">sporttotime</a>.
+							</p>
+						</ul>
+					</li>
+					<li>
+						<a class="toggle" href="javascript:void(0);">Who organises Tek treh vrhov?</a>
+						<ul class="inner  top-padding">
+							<p> Tek treh vrhov is organised by <a href="https://www.sz-ng.si" target="_blank"
+									rel="noopener noreferrer">Javni zavod za šport Nova Gorica</a>, Bazoviška 4, 5000
+								Nova Gorica.
+							</p>
+						</ul>
+					</li>
+					<li>
+						<a class="toggle" href="javascript:void(0);">General conditions</a>
 						<ul class="inner  top-padding">
 							<li>1. Udeleženci so nezgodno zavarovani pri Zavarovalnici Sava.</li>
 							<li>2. Tekači morajo biti vso pot na uradni progi. Odgovornost vsakega tekača je, da pozna
@@ -140,7 +143,7 @@
 							<li>4. Samo tekačem s Startno številko na vidnem mestu bo omogočen dostop do okrepčevalnice.
 								Hrano in pijačo je treba pojesti in popiti na mestu okrepčevalnice.</li>
 							<li>5. Uporaba smučarskih palic je dovoljena vsem tekačem! (Rule 251 that replaces Rule 251
-								(Mountain Races) and Rule 252 (Trail Races) of the IAAF Competition Rules (NEW Rule
+								(Mountain Gare) and Rule 252 (Trail Gare) of the IAAF Competition Rules (NEW Rule
 								approved by the IAAF Council in force from 1 January 2019))</li>
 							<li>6. Na določenih točkah bodo člani GRS in drugih medicinskih služb, ki bodo v stalnem
 								kontaktu z vodstvom tekme. Vzdolž trase na najbolj izpostavljenih mestih bodo
@@ -163,22 +166,7 @@
 								razdalji.</li>
 						</ul>
 					</li>
-					<li>
-						<a class="toggle" href="javascript:void(0);">+ Contact</a>
-						<ul class="inner  top-padding">
-							<li>Miha Repič</li>
-							<li>+386 (0)68187250</li>
-							<li><a href="mailto:mihamrr@gmail.com ">mihamrr@gmail.com</a></li>
-						</ul>
-					</li>
 				</ul>
-
-				<div class="center top-padding">
-					<a href="https://sportotime.com/eng/race/3579/race_registration" target="_blank"
-						rel="noopener noreferrer" class="btn">REGISTER NOW</a>
-					<p class="top-padding">Or check out other <a href="/en/races">races</a>.
-					</p>
-				</div>
 			</div>
 		</section>
 
@@ -193,6 +181,7 @@
 						<i class="fab fa-facebook-square"></i></a>
 				</div>
 			</div>
+
 		</section>
 
 		<!--Footer-->
