--- a/sl/proge/go1v-12km.html
+++ b/sl/proge/go1v-12km.html
@@ -48,7 +48,10 @@
 						class="menu-link">Prijava</a></li>
 				<li><a href="/sl/o-nas" class="menu-link">O nas</a></li>
 				<li><a href="/sl/kontakt" class="menu-link">Kontakt</a></li>
-				<li><a href="/en/races/go1v-12km" class="language-switch menu-link">EN <i class="fas fa-globe"></i></a>
+				<li>
+					<a href="/en/races/go1v-12km" class="language-switch menu-link">EN</a>
+					<span>/</span>					
+					<a href="/it/gare/go1v-12km" class="language-switch menu-link">IT</a>
 				</li>
 			</ul>
 		</div>
