--- a/en/index.html
+++ b/en/index.html
@@ -50,7 +50,7 @@
 						class="menu-link">Registration</a></li>
 				<li><a href="about" class="menu-link">About</a></li>
 				<li><a href="contact-us" class="menu-link">Contact</a></li>
-				<li><a href="/" class="language-switch menu-link">Sl <i class="fas fa-globe"></i></a>
+				<li><a href="/" class="language-switch menu-link">SI / IT</i></a>
 				</li>
 			</ul>
 		</div>
