--- a/en/races/index.html
+++ b/en/races/index.html
@@ -48,7 +48,7 @@
 						class="menu-link">Registration</a></li>
 				<li><a href="/en/about" class="menu-link">About</a></li>
 				<li><a href="/en/contact-us" class="menu-link">Contact</a></li>
-				<li><a href="/sl/proge" class="language-switch menu-link">SI <i class="fas fa-globe"></i></a></li>
+				<li><a href="/sl/proge" class="language-switch menu-link">SI</a></li>
 			</ul>
 		</div>
 	</header>
