--- a/it/gare/goriski-tek.html
+++ b/it/gare/goriski-tek.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="sl">
+<html lang="it">
 
 <head>
 	<!-- Global site tag (gtag.js) - Google Analytics -->
@@ -15,10 +15,10 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<meta name="keywords" content="trail, tek, treh, vrhov, slovenija, sabotin, škabrijel, sveta gora">
+	<meta name="keywords" content="trail, running, treh, vrhov, slovenija, sabotin, skabrijel, sveta gora">
 	<meta name="description"
-		content="Tek treh vrhov 2020 | 12km, 28km, 58km | tekaška preizkušnja med tremi vrhovi ob dolini reke Soče, 10. oktober 2020">
-	<title>Tek treh vrhov | Goriški tek</title>
+		content="Tek treh vrhov 2020 | 12km, 28km, 58km | trail running over three summits surrounding the valley of Soča river in the Western Slovenia, 10th October 2020">
+	<title>Tek treh vrhov | Gorica Run</title>
 	<!--Styles-->
 	<link rel="stylesheet" href="/styles/main.css">
 	<link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
@@ -31,7 +31,8 @@
 	<!--Navigation bar-->
 	<header id="navigation-bar">
 		<div class="home-container">
-			<a href="/" id="logo">T3V</a> </div>
+			<a href="/en" id="logo">T3V</a>
+		</div>
 		<div class="menu-icon-container">
 			<button class="menu-icon" data-target="menu">
 				<i class="fas fa-bars" id="menu-button"></i>
@@ -41,17 +42,14 @@
 		<div id="menu">
 			<a id="close-button">&times;</a>
 			<ul class="menu-content">
-				<li><a href="/sl/info" class="menu-link">Info</a></li>
-				<li><a href="/sl/proge" class="menu-link" id="races-button">Proge</a></li>
-				<li><a href="https://sportotime.com/slv/dogodek/1171" target="_blank" rel="noopener noreferrer"
-						class="menu-link">Prijava</a></li>
-				<li><a href="/sl/o-nas" class="menu-link">O nas</a></li>
-				<li><a href="/sl/kontakt" class="menu-link">Kontakt</a></li>
-				<li>
-					<a href="/en/races/gorica-run" class="language-switch menu-link">EN</a>
-					<span>/</span>					
-					<a href="/it/gare/goriski-tek" class="language-switch menu-link">IT</a>
-				</li>
+				<li><a href="/it/informazioni" class="menu-link">Info</a></li>
+				<li><a href="/it/gare" class="menu-link" id="races-button">Gare</a></li>
+				<li><a href="https://sportotime.com/eng/event/1171" target="_blank" rel="noopener noreferrer"
+						class="menu-link">Iscrizioni</a></li>
+				<li><a href="/it/chi-siamo" class="menu-link">Chi siamo</a></li>
+				<li><a href="/it/contatti" class="menu-link">Contatti</a></li>
+				<li><a href="/sl/proge/goriski-tek" class="language-switch menu-link">SI <i
+							class="fas fa-globe"></i></a>
 			</ul>
 		</div>
 	</header>
@@ -61,11 +59,11 @@
 		<section>
 			<div class="showcase-image">
 				<img src="../../assets/images/goriski-tek-m.jpg" 
-				alt="Tek treh vrhov - Goriški tek in hoja za upanje"
-				class="image-top">
+					alt="Tek treh vrhov - Gorica Run and Walk for Hope"
+					class="image-top">
 				<div class="text-wrap grid">
 					<span class="showcase-title content-wrap">
-						8. Goriški tek in hoja za upanje
+						8th Gorica Run and Walk for Hope
 					</span>
 				</div>
 			</div>
@@ -73,35 +71,35 @@
 		<!--section-D-->
 		<section class="section-d grid flex-item">
 			<div class="content-wrap">
-				<p class="opening">Dobrodelni tek v sodelovanju z <a href="http://www.ko-rak.si/" target="_blank"
-						rel="noopener noreferrer">društvom ko-Rak</a>, ki usklajuje interese ter oblikuje in predlaga
-					programe za preventivno dejavnost na področju boja proti raku.</p>
+				<p class="opening">Charity run co-organised with <a href="http://www.ko-rak.si/" target="_blank"
+						rel="noopener noreferrer">ko-Rak society</a>, which organises various preventive programmes
+					dealing with cancer.</p>
 
 				<ul class="info-container">
-					<li>Dolžina: <b>4 km, 10 km in 15</b></li>
-					<li>Datum: <b>3. oktober 2020</b></li>
-					<li>Start: <b>10.30</b>, <i>Bevkov trg Nova Gorica</i></li>
+					<li>Distance: <b>4 km, 10 km in 15</b></li>
+					<li>Date: <b>3th October 2020</b></li>
+					<li>Start: <b>10.30</b>, <i>Bevk Square Nova Gorica</i></li>
 				</ul>
 
-				<h2>Cena</h2>
+				<h2>Entry fee</h2>
 				<ul class="price">
-					<li>do 1. julija 2020: <b>8 €</b></li>
-					<li>do dneva dogodka: <b>10 €</b></li>
-					<li class="small-text">* Startnine gredo v celoti v dobrodelne namene.</li>
+					<li>until 1st July 2020: <b>8 €</b></li>
+					<li>until the day of the event: <b>10 €</b></li>
+					<li class="small-text">* Entry fees will be donated to charity.</li>
 				</ul>
 
 				<ul class="accordian top-padding">
 					<li>
-						<a class="toggle" href="javascript:void(0);">+ Opis proge</a>
+						<a class="toggle" href="javascript:void(0);">+ Track description</a>
 						<ul class="inner  top-padding">
 							<li>
-								<p>Tek je ravninski po ulicah in obrobju Nove Gorice ter Šempetra.</p>
+								<p>Race takes place on mostly flat terrain through Nova Gorica and Šempeter.</p>
 							</li>
 						</ul>
 					</li>
 
 					<li>
-						<a class="toggle" href="javascript:void(0);">+ Kontakt</a>
+						<a class="toggle" href="javascript:void(0);">+ Contatti</a>
 						<ul class="inner  top-padding">
 							<li>Javni zavod za šport Nova Gorica</li>
 							<li>+386 (0)53302020</li>
@@ -111,16 +109,16 @@
 				</ul>
 
 				<div class="center top-padding">
-					<a href="https://sportotime.com/slv/dogodek/1171" target="_blank" rel="noopener noreferrer"
-						class="btn">PRIJAVITE SE</a>
-					<p class="top-padding">Ali pa si oglejte še ostale <a href="/sl/proge">proge</a>.
+					<a href="https://sportotime.com/eng/event/1171" target="_blank" rel="noopener noreferrer"
+						class="btn">REGISTER NOW</a>
+					<p class="top-padding">Or check out other <a href="/it/gare">gare</a>.
 					</p>
 				</div>
 			</div>
 		</section>
 
 		<!--section-C-->
-		<section class="section-c grid">
+		<section class="section-c" class="grid">
 			<div class="content-wrap">
 				<div class="icon-container">
 					<a href="https://www.instagram.com/go4trail/" target="_blank" rel="noopener noreferrer" class="icon"
