--- a/sl/info.html
+++ b/sl/info.html
@@ -48,7 +48,10 @@
 						class="menu-link">Prijava</a></li>
 				<li><a href="o-nas" class="menu-link">O nas</a></li>
 				<li><a href="kontakt" class="menu-link">Kontakt</a></li>
-				<li><a href="/en/faq" class="language-switch menu-link">EN <i class="fas fa-globe"></i></a>
+				<li>
+					<a href="/en/faq" class="language-switch menu-link">EN</a>
+					<span>/</span>					
+					<a href="/it/informazioni" class="language-switch menu-link">IT</a>
 				</li>
 			</ul>
 		</div>
