--- a/sl/kontakt.html
+++ b/sl/kontakt.html
@@ -48,7 +48,11 @@
 						class="menu-link">Prijava</a></li>
 				<li><a href="o-nas" class="menu-link">O nas</a></li>
 				<li><a href="kontakt" class="menu-link">Kontakt</a></li>
-				<li><a href="/en/contact-us" class="language-switch menu-link">EN <i class="fas fa-globe"></i></a></li>
+				<li>
+					<a href="/en/contact-us" class="language-switch menu-link">EN</a>
+					<span>/</span>					
+					<a href="/it/contatti" class="language-switch menu-link">IT</a>
+				</li>
 			</ul>
 		</div>
 	</header>
